--- a/src/components/content/slider/Slider.css
+++ b/src/components/content/slider/Slider.css
@@ -100,7 +100,7 @@
 }
  
 /* Ajuste de Swiper */
-.swiper {
+.slider-container .swiper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,18 +109,18 @@
 }
 
 /* Pagination Styles (from Swiper) */
-.swiper-pagination-bullet {
+.slider-container .swiper-pagination-bullet {
   background-color: #ffffff;
   opacity: 0.5;
   transition: opacity 0.3s;
 }
 
-.swiper-pagination-bullet-active {
+.slider-container .swiper-pagination-bullet-active {
   opacity: 1;
 }
 
 /* Pagination Styles (from Swiper) */
-.swiper-pagination-bullet {
+.slider-container .swiper-pagination-bullet {
   background-color: #ffffff;
   opacity: 0.5;
   transition: opacity 0.3s;
@@ -130,7 +130,7 @@
   color: #02ffa1;
 }
 /* Logo Styles for Central Logo */
-.slider-logo {
+.slider-container .slider-logo {
   position: absolute;
   top: 50%;
   left: 50%;
